--- a/main.html
+++ b/main.html
@@ -7,6 +7,15 @@
 
   <body>
     <!-- write the body here -->
+	<form id="userForm">
+    <label for="age">Age:</label>
+    <input id="age" type="number" name="age" required >
+
+    <label for="name">Name:</label>
+    <input id="name" type="text" name="name" required>
+
+    <button id="btn" type="submit">Submit</button>
+</form>
 
     <script type="text/javascript" src="./script.js"></script>
   </body>
